5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1785_3135.log
== TEST (2019-05-30 11:49:32) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(vet))
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
	print(m)
-- ERROR:
File "XXXX", line 7
    while(i<size(vet))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:40) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n))
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
	print(m)
-- ERROR:
File "XXXX", line 7
    while(i<size(n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:51) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:41) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
print(sum(m)/size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:53) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
print(sum(m)/size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:08) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=(((n[i]**1/2)*n)**2)/n
	i=i+1
print(sum(m)/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:03) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=((sum(n)**1/2)**2)/size(n)
	i=i+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:30) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=((sum(n)**1/2)**2)/size(n)
	i=i+1
print(m/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:47) 
-- CODE:
from numpy import*

n=array(eval(input("entre com o vetor")))

i=0
k=0
while(i<size(n)):
	m=((sum(n)**1/2)**2)/size(n)
	i=i+1
print(m/size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
